Deploy full site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Coming Soon</title><style>body{display:flex;justify-content:center;align-items:center;height:100vh;margin:0;background:#000;color:#fff;font-family:sans-serif}</style></head><body><h1>🚧 Coming Soon</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SelfieGym — Fitness That Fits Your Life</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <a href="index.html" class="logo">SelfieGym</a>
+        <ul class="nav-links">
+            <li><a href="programs.html">Programs</a></li>
+            <li><a href="exercises.html">Exercises</a></li>
+            <li><a href="nutrition.html">Nutrition</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="dashboard.html" class="nav-cta">Member Login</a></li>
+        </ul>
+        <button class="mobile-menu">☰</button>
+    </nav>
+
+    <section class="hero">
+        <div class="hero-content">
+            <span class="hero-tag">Your journey starts here</span>
+            <h1>Fitness that<br>fits your life.</h1>
+            <p>Personal coaching, custom workouts, and real results — all on your schedule.</p>
+            <div class="hero-buttons">
+                <a href="pricing.html" class="btn-primary">Start Free Trial</a>
+                <a href="programs.html" class="btn-secondary">View Programs</a>
+            </div>
+        </div>
+        <div class="hero-visual">
+            <div class="hero-image-wrapper">
+                <img src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?w=800&h=1000&fit=crop" alt="Fitness">
+                <div class="floating-stat stat-1">
+                    <span class="stat-number">500+</span>
+                    <span class="stat-label">Exercises</span>
+                </div>
+                <div class="floating-stat stat-2">
+                    <span class="stat-number">24/7</span>
+                    <span class="stat-label">Support</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="trust-bar">
+        <p>Trusted by <strong>10,000+</strong> members worldwide</p>
+        <div class="trust-logos">
+            <span>⭐⭐⭐⭐⭐</span>
+            <span>4.9 Rating</span>
+        </div>
+    </section>
+
+    <section class="features">
+        <div class="section-header">
+            <h2>Everything you need.</h2>
+            <p>No gym required. No equipment needed. Just you and your goals.</p>
+        </div>
+        <div class="features-grid">
+            <div class="feature-card">
+                <div class="feature-image">
+                    <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=400&h=300&fit=crop" alt="Custom Programs">
+                </div>
+                <h3>Custom Programs</h3>
+                <p>Workouts designed around your goals, schedule, and fitness level.</p>
+                <a href="programs.html">Explore Programs →</a>
+            </div>
+            <div class="feature-card">
+                <div class="feature-image">
+                    <img src="https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=400&h=300&fit=crop" alt="Nutrition">
+                </div>
+                <h3>Nutrition Plans</h3>
+                <p>Meal guides that fit your lifestyle. No strict diets, just smart eating.</p>
+                <a href="nutrition.html">See Nutrition →</a>
+            </div>
+            <div class="feature-card">
+                <div class="feature-image">
+                    <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=400&h=300&fit=crop" alt="Exercises">
+                </div>
+                <h3>Exercise Library</h3>
+                <p>500+ exercises with step-by-step guides. Perfect form every time.</p>
+                <a href="exercises.html">Browse Exercises →</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="how-it-works">
+        <div class="section-header">
+            <h2>Simple as 1-2-3</h2>
+        </div>
+        <div class="steps">
+            <div class="step">
+                <div class="step-number">1</div>
+                <h3>Tell us your goals</h3>
+                <p>Lose weight, build muscle, or just get healthier — you decide.</p>
+            </div>
+            <div class="step">
+                <div class="step-number">2</div>
+                <h3>Get your plan</h3>
+                <p>Receive a personalized workout and nutrition program.</p>
+            </div>
+            <div class="step">
+                <div class="step-number">3</div>
+                <h3>Start transforming</h3>
+                <p>Follow your plan, track progress, see results.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials">
+        <div class="section-header">
+            <h2>Real people. Real results.</h2>
+        </div>
+        <div class="testimonials-grid">
+            <div class="testimonial">
+                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&h=150&fit=crop&crop=face" alt="Ahmed">
+                <p>"Lost 15kg in 4 months. The programs actually work and fit my busy schedule."</p>
+                <div class="testimonial-author">
+                    <strong>Ahmed S.</strong>
+                    <span>Dubai, UAE</span>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=150&h=150&fit=crop&crop=face" alt="Sarah">
+                <p>"Finally found something I can stick with. The exercises are easy to follow."</p>
+                <div class="testimonial-author">
+                    <strong>Sarah M.</strong>
+                    <span>Riyadh, KSA</span>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=150&h=150&fit=crop&crop=face" alt="Omar">
+                <p>"Built real muscle without a gym membership. Best investment I've made."</p>
+                <div class="testimonial-author">
+                    <strong>Omar K.</strong>
+                    <span>Jeddah, KSA</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta">
+        <h2>Ready to start?</h2>
+        <p>Join thousands who've transformed their lives.</p>
+        <a href="pricing.html" class="btn-primary">Start Your Free Trial</a>
+        <span class="cta-note">No credit card required</span>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-brand">
+                <a href="index.html" class="logo">SelfieGym</a>
+                <p>Fitness that fits your life.</p>
+            </div>
+            <div class="footer-links">
+                <h4>Product</h4>
+                <a href="programs.html">Programs</a>
+                <a href="exercises.html">Exercises</a>
+                <a href="nutrition.html">Nutrition</a>
+                <a href="pricing.html">Pricing</a>
+            </div>
+            <div class="footer-links">
+                <h4>Company</h4>
+                <a href="#">About</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </div>
+            <div class="footer-links">
+                <h4>Legal</h4>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2025 SelfieGym. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="app.js"></script>
+</body>
+</html>
