--- a/prototype/full-site/pricing.html
+++ b/prototype/full-site/pricing.html
@@ -6,6 +6,7 @@
     <title>Pricing — SelfieGym</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <nav>
